test/error/ast/CaseElemDuplicate.mod
MODULE CaseElemDuplicate;
VAR x: INTEGER;
BEGIN
  CASE x OF
    1: ;
    1: ;
  END;
END CaseElemDuplicate.
